# kivi

./: .gitignore  404.html  README.md  __init__.py  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml
SparkSupport/SparkSupport/: index.html
api/ahp/: index.html
api/datasets/: index.html
api/evaluate/: index.html
api/stepwise/: index.html
bank/AI与RPA/: index.html
bank/overview/: index.html
bank/信贷产品盈利分析/: index.html
bank/信贷流程/: index.html
bank/关联关系/: index.html
bank/关联风险/: index.html
bank/发票数据/: index.html
bank/小企业经营性贷款模型策略/: index.html
bank/小微反欺诈/: index.html
bank/小微经营贷/: index.html
bank/征信查询/: index.html
bank/数据埋点/: index.html
bank/普惠客户标签/: index.html
bank/渠道风控/: index.html
bank/监控报表/: index.html
bank/税务数据/: index.html
bank/行业特性/: index.html
bank/评分卡流程/: index.html
bank/贷后催收/: index.html
bank/预期损失/: index.html
bank/额度策略/: index.html
bank/风控入门/: index.html
bank/风控术语/: index.html
blog/: index.html
data_vision/data_vision/: index.html
descriptive_statistics/data_analysis/: index.html
descriptive_statistics/descriptive_statistics/: index.html
docs/: index.md
docs/SparkSupport/: SparkSupport.md
docs/api/: ahp.md  datasets.md  evaluate.md  stepwise.md
docs/bank/: AI与RPA.md  overview.md  信贷产品盈利分析.md  信贷流程.md  关联关系.md  关联风险.md  发票数据.md  小企业经营性贷款模型策略.md  小微反欺诈.md  小微经营贷.md  征信查询.md  数据埋点.md  普惠客户标签.md  渠道风控.md  监控报表.md  税务数据.md  行业特性.md  评分卡流程.md  贷后催收.md  预期损失.md  额度策略.md  风控入门.md  风控术语.md
docs/data_vision/: data_vision.md
docs/descriptive_statistics/: data_analysis.md  descriptive_statistics.md
docs/enterprise_rating/: 02_标签样本构造.md  03_决策树生成信贷规则.md  (+1 more)
kivi/: __init__.py
search/: search_index.json
(+253 files in other folders)
