[build-system]
# Minimum requirements for the build system to execute.
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "kivi"
version = "0.2.5"
description = "A LLM Agent Python package."
authors = ["chensy cao <chensy.cao@foxmail.com>"]
maintainers = []
license = "MIT"
readme = "README.md"
homepage = "https://kivi-risk.github.io/kivi-doc/"
repository = "https://github.com/kivi-risk/kivi.git"
keywords = ["llm", "agent", "embedding", "chatbot", "prompt"]
classifiers = [
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [
    { include = "kivi" },
]


[tool.poetry.dependencies]
# base
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
pandas = ">=1.2"
numpy = ">=1.25"
tqdm = ">=4.66.1"
scipy = ">=1.11.2"
scikit-learn = ">=1.3.0"
matplotlib = ">=3.7.2"
seaborn = ">=0.13.0"
statsmodels = ">=0.14.0"
jieba = {version = ">=0.42.1", optional = true}
xlsxwriter = {version = ">=3.1.2", optional = true}
pyspark = {version = ">=3.0", optional = true}
pydantic = ">=2.3"


[tool.poetry.group.spark.dependencies]


[tool.poetry.extras]
all = [
    "pandas", "numpy", "tqdm", "scipy", "scikit-learn", "matplotlib", "seaborn", "statsmodels",
    "jieba", "xlsxwriter", "pyspark"
]
jieba = ["jieba"]
xlsx = ["xlsxwriter"]
pyspark = ["pyspark"]


[tool.poetry.urls]
"Bug Tracker" = "https://github.com/kivi-risk/kivi/issues"
